Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2071

Memory leak in procfs handling

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • None
    • None
    • 3
    • 4325

      There seems to be a minor memory leak in all versions of lustre since at least Feb 2007.

      The name##_seq_open does single_open, but corresponding lprocfs_seq_release does seq_release instead of single_release, and as such a bit of memory allocated in single_open remains not freed.
      As such every call to lctl leaks 32 bytes.

            wc-triage WC Triage
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: